syntax = "proto3";

package api;

option go_package = "gitlab.ozon.dev/ArtoriasAbW/homework-01/pkg/api;api";
import "google/api/annotations.proto";

service Author {
    rpc AuthorGet(AuthorGetRequest) returns (AuthorGetResponse) {
        option (google.api.http) = {
            get: "/v1/author/{id}"
        };
    }
    rpc AuthorCreate(AuthorCreateRequest) returns (AuthorCreateResponse) {
        option (google.api.http) = {
            post: "/v1/author"
            body: "*"
        };
    }
    rpc AuthorList(AuthorListRequest) returns (AuthorListResponse) {
        option (google.api.http) = {
            get: "/v1/authors"
        };
    }
    rpc AuthorUpdate(AuthorUpdateRequest) returns (AuthorUpdateResponse) {
        option (google.api.http) = {
            put: "/v1/author"
            body: "*"
        };
    }
    rpc AuthorDelete(AuthorDeleteRequest) returns (AuthorDeleteResponse) {
        option (google.api.http) = {
            delete: "/v1/author"
            body: "*"
        };
    }
}

// ---------------------------------------------------------------------------------------------------------------------
// AuthorCreate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message AuthorGetRequest {
    uint64 id = 1;
}

message AuthorGetResponse {
    uint64 id = 1;
    string name = 2;
}

// ---------------------------------------------------------------------------------------------------------------------
// AuthorCreate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message AuthorCreateRequest {
    string name = 1;
}

message AuthorCreateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// AuthorList endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message AuthorListRequest {}

message AuthorListResponse {
    repeated Author authors = 1;

    message Author {
        uint64 id = 1;
        string name = 2;
    }
}

// ---------------------------------------------------------------------------------------------------------------------
// AuthorUpdate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message AuthorUpdateRequest {
    uint64 id = 1;
    string name = 2;
}
message AuthorUpdateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// AuthorDelete endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message AuthorDeleteRequest {
    uint64 id = 1;
}

message AuthorDeleteResponse {}
